--- a/index.html
+++ b/index.html
@@ -1,13 +1,219 @@
-<!doctype html>
-<html lang="en">
+<!DOCTYPE html>
+<html lang="fr">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/vite.svg" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Vite + React</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+    <title>Nesti — Plateforme Familiale Inclusive</title>
+    <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;700&display=swap" rel="stylesheet">
+    <style>
+      :root {
+        --nesti-bg: #F5FAFC;
+        --nesti-card: #FFF;
+        --nesti-primary: #53B0E5;
+        --nesti-yellow: #FFE066;
+        --nesti-sidebar: #EAF6FB;
+        --nesti-text: #222B45;
+        --nesti-muted: #6B7280;
+        --nesti-chat-bg: #EAF6FB;
+        --nesti-bot-bg: #FFF8E1;
+      }
+      html, body {
+        margin: 0; padding: 0;
+        background: var(--nesti-bg);
+        font-family: 'Inter', ui-sans-serif, system-ui, sans-serif;
+        color: var(--nesti-text);
+        height: 100%;
+      }
+      .app-flex { display: flex; min-height: 100vh; }
+      .sidebar {
+        width: 250px; background: var(--nesti-sidebar);
+        box-shadow: 2px 0 8px rgba(83,176,229,0.08);
+        display: flex; flex-direction: column; padding: 32px 16px;
+      }
+      .sidebar-logo { display: flex; align-items: center; margin-bottom: 48px; }
+      .sidebar-logo svg { width: 40px; height: 40px; margin-right: 12px; }
+      .sidebar-title { font-weight: bold; font-size: 1.5rem; color: var(--nesti-primary);}
+      .sidebar-nav { display: flex; flex-direction: column; gap: 18px; }
+      .nav-item {
+        display: flex; align-items: center; gap: 10px;
+        padding: 10px 16px; border-radius: 10px;
+        cursor: pointer; font-size: 1.1rem; color: var(--nesti-text);
+        transition: background 0.2s;
+      }
+      .nav-item.active, .nav-item:hover { background: var(--nesti-bg); font-weight: bold; }
+      .main { flex: 1; padding: 48px 32px; }
+      .header-row { display: flex; justify-content: space-between; align-items: center; }
+      .header-title { font-size: 2.2rem; font-weight: 700;}
+      .header-desc { color: var(--nesti-muted);}
+      .avatar { width: 48px; height: 48px; border-radius: 50%; background: #EEE; border: 2px solid #D9F2FA;}
+      .dashboard-grid {
+        display: grid; grid-template-columns: 1fr 2fr 1fr; gap: 32px;
+        margin-top: 32px;
+      }
+      .card { background: var(--nesti-card); border-radius: 18px; box-shadow: 0 2px 10px #eaf6fb66; padding: 24px; margin-bottom: 24px;}
+      .card h2 { margin-top: 0; font-size: 1.2rem; font-weight: 600; }
+      .calendar-table { width: 100%; border-collapse: collapse; text-align: center;}
+      .calendar-table th, .calendar-table td { padding: 6px; }
+      .calendar-evt {
+        display: flex; align-items: center; margin-top: 8px; gap: 8px;
+        font-size: 0.98rem; background: #eaf6fb; border-radius: 8px; padding: 3px 9px;
+      }
+      .evt-icon { width: 16px; height: 16px;}
+      .chat-list { max-height: 190px; overflow-y: auto; margin-bottom: 10px;}
+      .chat-msg {
+        margin-bottom: 10px; padding: 10px 14px; border-radius: 12px; max-width: 70%;
+        font-size: 1rem; word-break: break-word;
+      }
+      .chat-me { background: var(--nesti-chat-bg); align-self: flex-end;}
+      .chat-bot { background: var(--nesti-bot-bg); align-self: flex-start; }
+      .chat-row { display: flex; flex-direction: column; align-items: flex-end;}
+      .chat-row.bot { align-items: flex-start;}
+      .chat-input-row { display: flex; gap: 10px; }
+      .chat-inp {
+        flex: 1; border: 1px solid #E0E0E0; border-radius: 8px; padding: 8px 12px;
+        font-size: 1rem;
+      }
+      .chat-btn {
+        background: var(--nesti-yellow); color: var(--nesti-text);
+        border: none; border-radius: 8px; padding: 8px 18px; font-weight: bold;
+        cursor: pointer;
+      }
+      .activity-card { background: var(--nesti-bot-bg); border-radius: 12px; padding: 14px 18px; margin-bottom: 20px;}
+      .wellbeing-card { background: var(--nesti-bg); border-radius: 12px; padding: 14px 18px; }
+      .wellbeing-btn { background: var(--nesti-yellow); border: none; border-radius: 8px; padding: 7px 15px; font-weight: bold; cursor: pointer; margin-top: 9px;}
+      @media (max-width: 1100px) {
+        .dashboard-grid { grid-template-columns: 1fr; }
+      }
+      @media (max-width: 800px) {
+        .main { padding: 12px 3vw; }
+        .sidebar { width: 100px; padding: 20px 5px;}
+        .sidebar-title { display: none;}
+        .header-title { font-size: 1.3rem;}
+      }
+    </style>
   </head>
   <body>
-    <div id="root"></div>
-    <script type="module" src="/src/main.jsx"></script>
+    <div class="app-flex">
+      <!-- Sidebar -->
+      <aside class="sidebar">
+        <div class="sidebar-logo">
+          <!-- Logo SVG -->
+          <svg viewBox="0 0 40 40"><circle cx="20" cy="20" r="20" fill="#53B0E5"/><ellipse cx="20" cy="22" rx="10" ry="8" fill="#FFE066"/><ellipse cx="19" cy="19" rx="5" ry="3.5" fill="#FFF"/><circle cx="22" cy="19" r="1" fill="#222B45"/><ellipse cx="23" cy="24" rx="3" ry="1" fill="#FFD600"/></svg>
+          <span class="sidebar-title">Nesti</span>
+        </div>
+        <nav class="sidebar-nav">
+          <div class="nav-item active"><svg class="evt-icon" viewBox="0 0 24 24"><rect x="3" y="5" width="18" height="16" rx="2" fill="#53B0E5"/><rect x="7" y="2" width="2" height="6" fill="#FFE066"/><rect x="15" y="2" width="2" height="6" fill="#FFE066"/></svg>Dashboard</div>
+          <div class="nav-item"><svg class="evt-icon" viewBox="0 0 24 24"><circle cx="12" cy="12" r="10" fill="#53B0E5"/><rect x="8" y="14" width="8" height="2" rx="1" fill="#FFE066"/></svg>Chat</div>
+          <div class="nav-item"><svg class="evt-icon" viewBox="0 0 24 24"><rect x="3" y="8" width="18" height="12" rx="2" fill="#FFE066"/><circle cx="7" cy="12" r="2" fill="#53B0E5"/><circle cx="17" cy="12" r="2" fill="#53B0E5"/></svg>Activities</div>
+          <div class="nav-item"><svg class="evt-icon" viewBox="0 0 24 24"><circle cx="12" cy="12" r="10" fill="#FFE066"/><rect x="10" y="8" width="4" height="8" rx="2" fill="#53B0E5"/></svg>Settings</div>
+        </nav>
+      </aside>
+      <!-- Main -->
+      <main class="main">
+        <div class="header-row">
+          <div>
+            <span class="header-title">Bonjour, Emma</span>
+            <div class="header-desc">Organisation et bien-être pour toute la famille</div>
+          </div>
+          <img class="avatar" src="https://www.svgrepo.com/show/427834/avatar-profile.svg" alt="avatar" />
+        </div>
+        <div class="dashboard-grid">
+          <!-- Calendrier -->
+          <section class="card">
+            <h2>Emploi du temps</h2>
+            <table class="calendar-table">
+              <thead>
+                <tr><th>L</th><th>M</th><th>M</th><th>J</th><th>V</th><th>S</th><th>D</th></tr>
+              </thead>
+              <tbody>
+                <tr>
+                  <td>9</td><td>10</td><td>11</td><td>12</td><td>13</td><td>14</td><td>15</td>
+                </tr>
+                <tr>
+                  <td colspan="7" style="background:none; border:none;">
+                    <div class="calendar-evt"><svg class="evt-icon" viewBox="0 0 24 24"><rect x="2" y="6" width="20" height="12" rx="4" fill="#53B0E5"/></svg>15:00 Heure du goûter</div>
+                    <div class="calendar-evt"><svg class="evt-icon" viewBox="0 0 24 24"><rect x="2" y="6" width="20" height="12" rx="4" fill="#FFE066"/></svg>17:00 Cours de piano</div>
+                    <div class="calendar-evt"><svg class="evt-icon" viewBox="0 0 24 24"><rect x="2" y="6" width="20" height="12" rx="4" fill="#53B0E5"/></svg>20:00 Jeux de famille</div>
+                  </td>
+                </tr>
+              </tbody>
+            </table>
+          </section>
+          <!-- Chat familial -->
+          <section class="card" style="grid-column: span 2;">
+            <h2>Chat familial</h2>
+            <div id="chat-list" class="chat-list"></div>
+            <form class="chat-input-row" id="chat-form" autocomplete="off">
+              <input id="chat-input" class="chat-inp" placeholder="Écrire un message..." />
+              <button type="submit" class="chat-btn">Envoyer</button>
+              <button type="button" class="chat-btn" id="rephrase-btn" title="Reformuler (IA)">🤖</button>
+            </form>
+          </section>
+          <!-- Droite : activités & bien-être -->
+          <div>
+            <div class="activity-card">
+              <h3 style="margin:0 0 5px 0;">Activités inclusives</h3>
+              <div style="font-weight:600;">Expo sur l’art-thérapie</div>
+              <div style="color:#888;font-size:0.98em;">Musée de l’art moderne</div>
+            </div>
+            <div class="wellbeing-card">
+              <h3 style="margin:0 0 5px 0;">Votre bien-être</h3>
+              <div>N’oubliez pas votre pause méditation</div>
+              <button class="wellbeing-btn" onclick="alert('Méditation lancée !')">Démarrer</button>
+            </div>
+          </div>
+        </div>
+      </main>
+    </div>
+    <!-- JS pour chat IA et interactions -->
+    <script>
+      // Exemple données chat
+      const chatData = [
+        {from: "me", text:"Salut à tous! Quelle activité ce soir ?"},
+        {from: "bot", text:"Bonjour! Je peux vous suggérer la dernière expo sur l’art thérapie à 1h"},
+      ];
+      function renderChat() {
+        const chatList = document.getElementById('chat-list');
+        chatList.innerHTML = "";
+        chatData.forEach(msg => {
+          const row = document.createElement("div");
+          row.className = "chat-row " + (msg.from === "bot" ? "bot" : "");
+          const bubble = document.createElement("div");
+          bubble.className = "chat-msg " + (msg.from === "bot" ? "chat-bot" : "chat-me");
+          if(msg.from === "bot"){
+            bubble.innerHTML = '<svg style="width:18px;height:18px;vertical-align:middle;margin-right:7px;" viewBox="0 0 32 32"><circle cx="16" cy="16" r="16" fill="#FFE066"/><ellipse cx="16" cy="13" rx="7" ry="5" fill="#FFF"/><ellipse cx="16" cy="22" rx="9" ry="6" fill="#FFFDE7"/><circle cx="14" cy="13" r="1" fill="#222B45"/><circle cx="18" cy="13" r="1" fill="#222B45"/><rect x="13" y="18" width="6" height="2" rx="1" fill="#FFD600"/></svg>' + msg.text;
+          }else{
+            bubble.textContent = msg.text;
+          }
+          row.appendChild(bubble);
+          chatList.appendChild(row);
+        });
+        chatList.scrollTop = chatList.scrollHeight;
+      }
+      renderChat();
+      // Chat submit
+      document.getElementById('chat-form').onsubmit = e => {
+        e.preventDefault();
+        const inp = document.getElementById('chat-input');
+        const txt = inp.value.trim();
+        if(txt){
+          chatData.push({from:"me", text:txt});
+          renderChat();
+          inp.value = "";
+        }
+      };
+      // Simili-IA : reformulation bienveillante (très simplifiée)
+      document.getElementById('rephrase-btn').onclick = function(){
+        const inp = document.getElementById('chat-input');
+        if(inp.value.trim()){
+          // Reformulation naïve : remplacement de mots, adoucissement
+          let txt = inp.value.replace(/(pas|non|nul|bête|fâché|problème|difficile)/gi, "un peu compliqué");
+          if(!txt.match(/(merci|bravo|chouette|génial|super)/i)){
+            txt = "Merci pour ta participation ! " + txt;
+          }
+          inp.value = txt;
+        }
+      };
+    </script>
   </body>
 </html>
