--- a/index.html
+++ b/index.html
@@ -1637,7 +1637,7 @@
                     <ul class="footer-links">
                         <li><a href="mailto:bonjour@nesti.fr">blacknwhitemanagement@gmail.com</a></li>
                         <li><a href="tel:+33123456789">+33 6 36 02 60 60</a></li>
-                        <li>12 Avenue de l'Inclusion<br>75000 Paris</li>
+                        <li>75015 Paris</li>
                     </ul>
                 </div>
             </div>
