--- a/index.html
+++ b/index.html
@@ -7,7 +7,6 @@
     <link href="https://fonts.googleapis.com/css2?family=Comic+Neue:wght@400;700&family=Nunito:wght@400;600;700&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
     <link rel="stylesheet" href="https://unpkg.com/leaflet@1.9.4/dist/leaflet.css" />
-    <a href="dashboard.html" class="btn" id="signup-btn">Essayer gratuitement</a>
     <style>
         :root {
             --primary: #FF7B54;
@@ -1064,7 +1063,7 @@
                     <li><a href="#" data-page="blog">Blog</a></li>
                     <li><a href="#" data-page="resources">Ressources</a></li>
                 </ul>
-                <a href="#" class="btn" id="signup-btn">Essayer gratuitement</a>
+                <a href="dashboard.html" class="btn" id="signup-btn">Espace membre</a>
             </nav>
         </div>
     </header>
