--- a/index.html
+++ b/index.html
@@ -1392,7 +1392,7 @@
             <div class="modal-content">
                 <span class="close-modal">&times;</span>
                 <h2 style="margin-bottom: 20px;">Rejoignez l'aventure Nesti</h2>
-                <form id="signup-form" netlify>
+                <form id="signup-form">
                     <div class="form-group">
                         <label for="name">Votre nom</label>
                         <input type="text" id="name" class="form-control" required>
@@ -1431,7 +1431,7 @@
             <div class="modal-content">
                 <span class="close-modal">&times;</span>
                 <h2 style="margin-bottom: 20px;">Connectez-vous</h2>
-                <form id="login-form" netlify>
+                <form id="login-form">
                     <div class="form-group">
                         <label for="login-email">Email</label>
                         <input type="email" id="login-email" class="form-control" required>
