--- a/index.html
+++ b/index.html
@@ -1077,8 +1077,8 @@
                     <h1>L'inclusion se construit en famille</h1>
                     <p>Rejoignez l'écosystème qui transforme le temps familial en expériences inclusives mémorables</p>
                     <div class="hero-buttons">
-                        <a href="#" class="btn" id="start-btn">Commencer l'aventure</a>
-                        <a href="#" class="btn btn-secondary" id="demo-btn">Voir la démo</a>
+                        <a href="dashboard.html" class="btn" id="start-btn">Commencer l'aventure</a>
+                        <a href="dashboard.html" class="btn btn-secondary" id="demo-btn">Voir la démo</a>
                     </div>
                 </div>
             </div>
