--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <link href="https://fonts.googleapis.com/css2?family=Comic+Neue:wght@400;700&family=Nunito:wght@400;600;700&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
     <link rel="stylesheet" href="https://unpkg.com/leaflet@1.9.4/dist/leaflet.css" />
-    <link rel="Dashboard" href="https://nesti-app-1.onrender.com" />
+    <link rel="dashboard" href="https://nesti-app-1.onrender.com/dashboard.html" />
     <script src="https://www.google.com/recaptcha/api.js" async defer></script>
     <style>
         :root {
