--- a/index.html
+++ b/index.html
@@ -1068,7 +1068,7 @@
                 <div class="form-group">
                     <div class="g-recaptcha" data-sitekey="VOTRE_CLE_DE_SITE"></div>
                 </div>
-                <a href="dashboard.html" class="btn" id="signup-btn">Espace membre</a>
+                <a href="https://nesti-app-1.onrender.com/dashboard.html" class="btn" id="signup-btn">Espace membre</a>
             </nav>
         </div>
     </header>
@@ -1082,8 +1082,8 @@
                     <h1>L'inclusion se construit en famille</h1>
                     <p>Rejoignez l'écosystème qui transforme le temps familial en expériences inclusives mémorables</p>
                     <div class="hero-buttons">
-                        <a href="dashboard.html" class="btn" id="start-btn">Commencer l'aventure</a>
-                        <a href="dashboard.html" class="btn btn-secondary" id="demo-btn">Voir la démo</a>
+                        <a href="https://nesti-app-1.onrender.com/dashboard.html" class="btn" id="start-btn">Commencer l'aventure</a>
+                        <a href="https://nesti-app-1.onrender.com/dashboard.html" class="btn btn-secondary" id="demo-btn">Voir la démo</a>
                     </div>
                 </div>
             </div>
