--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <link href="https://fonts.googleapis.com/css2?family=Comic+Neue:wght@400;700&family=Nunito:wght@400;600;700&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
     <link rel="stylesheet" href="https://unpkg.com/leaflet@1.9.4/dist/leaflet.css" />
-    <link rel="dashboard" href="https://nesti-app-1.onrender.com/dashboard.html" />
+    <link rel="dashboard" href="https://dashboard-jops.onrender.com" />
     <script src="https://www.google.com/recaptcha/api.js" async defer></script>
     <style>
         :root {
@@ -1068,7 +1068,7 @@
                 <div class="form-group">
                     <div class="g-recaptcha" data-sitekey="VOTRE_CLE_DE_SITE"></div>
                 </div>
-                <a href="https://nesti-app-1.onrender.com/dashboard.html" class="btn" id="signup-btn">Espace membre</a>
+                <a href="https://dashboard-jops.onrender.com" class="btn" id="signup-btn">Espace membre</a>
             </nav>
         </div>
     </header>
@@ -1082,8 +1082,8 @@
                     <h1>L'inclusion se construit en famille</h1>
                     <p>Rejoignez l'écosystème qui transforme le temps familial en expériences inclusives mémorables</p>
                     <div class="hero-buttons">
-                        <a href="https://nesti-app-1.onrender.com/dashboard.html" class="btn" id="start-btn">Commencer l'aventure</a>
-                        <a href="https://nesti-app-1.onrender.com/dashboard.html" class="btn btn-secondary" id="demo-btn">Voir la démo</a>
+                        <a href="https://dashboard-jops.onrender.com" class="btn" id="start-btn">Commencer l'aventure</a>
+                        <a href="https://dashboard-jops.onrender.com" class="btn btn-secondary" id="demo-btn">Voir la démo</a>
                     </div>
                 </div>
             </div>
@@ -1755,7 +1755,7 @@
             
             // Rediriger vers le dashboard après un court délai
             setTimeout(function() {
-                window.location.href = 'https://nesti-app-1.onrender.com/dashboard.html';
+                window.location.href = 'https://dashboard-jops.onrender.com';
             }, 500);
             
             return false;
