--- a/index.html
+++ b/index.html
@@ -1066,7 +1066,7 @@
                     <li><a href="#" data-page="resources">Ressources</a></li>
                 </ul>
                 <div class="form-group">
-                    <div class="g-recaptcha" data-sitekey="VOTRE_CLE_DE_SITE"></div>
+                    <div class="g-recaptcha" data-sitekey="6LcVE88rAAAAAF5U-mHUIjOWsOheyAQmG45ovK0P"></div>
                 </div>
                 <a href="https://dashboard-jops.onrender.com" class="btn" id="signup-btn">Espace membre</a>
             </nav>
