--- a/index.html
+++ b/index.html
@@ -1447,6 +1447,9 @@
                     <div class="form-group">
                         <div class="g-recaptcha" data-sitekey="6Lewls8rAAAAANMJe-kmcowG1qKwaLJQldjTSv3u"></div>
                     </div>
+                    <div class="form-group">
+                        <div class="g-recaptcha" data-sitekey="6LeTmc8rAAAAAEr7lYNcBEwDb6FQcLGwukp8Qbmx"></div>
+                    </div>
                     <button type="submit" class="btn" id="signup-btn" style="width: 100%;" onclick="redirectToDashboard()">
                         Se connecter
                     </button>             
