--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <link href="https://fonts.googleapis.com/css2?family=Comic+Neue:wght@400;700&family=Nunito:wght@400;600;700&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
     <link rel="stylesheet" href="https://unpkg.com/leaflet@1.9.4/dist/leaflet.css" />
-    <link rel="dashboard" href="https://dashboard-jops.onrender.com" />
+    <link rel="dashboard" href="https://nesti-dashboard.onrender.com/dashboard.html" />
     <script src="https://www.google.com/recaptcha/api.js" async defer></script>
     <style>
         :root {
@@ -1065,7 +1065,7 @@
                     <li><a href="#" data-page="blog">Blog</a></li>
                     <li><a href="#" data-page="resources">Ressources</a></li>
                 </ul>
-                <a href="https://dashboard-jops.onrender.com" class="btn" id="signup-btn">Espace membre</a>
+                <a href="https://nesti-dashboard.onrender.com/dashboard.html" class="btn" id="signup-btn">Espace membre</a>
             </nav>
         </div>
     </header>
@@ -1079,8 +1079,8 @@
                     <h1>L'inclusion se construit en famille</h1>
                     <p>Rejoignez l'écosystème qui transforme le temps familial en expériences inclusives mémorables</p>
                     <div class="hero-buttons">
-                        <a href="https://dashboard-jops.onrender.com" class="btn" id="start-btn">Commencer l'aventure</a>
-                        <a href="https://dashboard-jops.onrender.com" class="btn btn-secondary" id="demo-btn">Voir la démo</a>
+                        <a href="https://nesti-dashboard.onrender.com/dashboard.html" class="btn" id="start-btn">Commencer l'aventure</a>
+                        <a href="https://nesti-dashboard.onrender.com/dashboard.html" class="btn btn-secondary" id="demo-btn">Voir la démo</a>
                     </div>
                 </div>
             </div>
@@ -1755,7 +1755,7 @@
             document.getElementById('signup-modal').style.display = 'none';
             
             // Rediriger vers le dashboard avec les données utilisateur
-            window.location.href = `https://dashboard-jops.onrender.com?name=${encodeURIComponent(name)}&email=${encodeURIComponent(email)}`;
+            window.location.href = `https://nesti-dashboard.onrender.com/dashboard.html?name=${encodeURIComponent(name)}&email=${encodeURIComponent(email)}`;
             
             return false;
         }
