--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
     <link rel="stylesheet" href="https://unpkg.com/leaflet@1.9.4/dist/leaflet.css" />
     <link rel="dashboard" href="https://nesti-dashboard.onrender.com/dashboard.html" />
+    <link rel="page-pub" href="https://nesti-dashboard.onrender.com/page-pub.html" />
     <script src="https://www.google.com/recaptcha/api.js" async defer></script>
     <style>
         :root {
@@ -1064,6 +1065,7 @@
                     <li><a href="#" data-page="testimonials">Témoignages</a></li>
                     <li><a href="#" data-page="blog">Blog</a></li>
                     <li><a href="#" data-page="resources">Ressources</a></li>
+                    <li><a href="https://nesti-dashboard.onrender.com/page-pub.html" data-page="Page-PUB">Page Annexe</a></li>
                 </ul>
                 <a href="https://nesti-dashboard.onrender.com/dashboard.html" class="btn" id="signup-btn">Espace membre</a>
             </nav>
@@ -1476,6 +1478,7 @@
                         <li><a href="#" data-page="testimonials">Témoignages</a></li>
                         <li><a href="#" data-page="blog">Blog</a></li>
                         <li><a href="#" data-page="resources">Ressources</a></li>
+                        <li><a href="https://nesti-dashboard.onrender.com/page-pub.html"  data-page="page-pub">Page Annexe</a></li>
                     </ul>
                 </div>
                 <div class="footer-column">
@@ -1490,7 +1493,7 @@
                 <div class="footer-column">
                     <h3>Contact</h3>
                     <ul class="footer-links">
-                        <li><a href="mailto:bonjour@nesti.fr">bonjour@nesti.fr</a></li>
+                        <li><a href="mailto:bonjour@nesti.fr">blacknwhitemanagenement@gmail.com</a></li>
                         <li><a href="#">Support</a></li>
                         <li><a href="#">FAQ</a></li>
                         <li><a href="#">Presse</a></li>
