--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
     <link rel="stylesheet" href="https://unpkg.com/leaflet@1.9.4/dist/leaflet.css" />
     <link rel="dashboard" href="https://nesti-dashboard.onrender.com/dashboard.html" />
-    <link rel="page-pub" href="https://nesti-dashboard.onrender.com/page-pub.html" />
+    <link rel="page-pub" href="https://page-pub.onrender.com" />
     <script src="https://www.google.com/recaptcha/api.js" async defer></script>
     <style>
         :root {
@@ -1065,7 +1065,7 @@
                     <li><a href="#" data-page="testimonials">Témoignages</a></li>
                     <li><a href="#" data-page="blog">Blog</a></li>
                     <li><a href="#" data-page="resources">Ressources</a></li>
-                    <li><a href="https://nesti-dashboard.onrender.com/page-pub.html" data-page="Page-PUB">Page Annexe</a></li>
+                    <li><a href="https://page-pub.onrender.com" data-page="Page-PUB">Page Annexe</a></li>
                 </ul>
                 <a href="https://nesti-dashboard.onrender.com/dashboard.html" class="btn" id="signup-btn">Espace membre</a>
             </nav>
@@ -1478,7 +1478,7 @@
                         <li><a href="#" data-page="testimonials">Témoignages</a></li>
                         <li><a href="#" data-page="blog">Blog</a></li>
                         <li><a href="#" data-page="resources">Ressources</a></li>
-                        <li><a href="https://nesti-dashboard.onrender.com/page-pub.html"  data-page="page-pub">Page Annexe</a></li>
+                        <li><a href="https://page-pub.onrender.com"  data-page="page-pub">Page Annexe</a></li>
                     </ul>
                 </div>
                 <div class="footer-column">
